[tool.poetry]
name = "samet_toolkit"
version = "0.1.1.rc3"
description = "This is a toolkit python packages for Samet's projects."
authors = ["samet <samettaspinarx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10, <3.13"
langchain-google-vertexai = "^2.0.9"
langchain-openai = "^0.2.14"
langchain-nvidia-ai-endpoints = "^0.3.7"
omegaconf = "^2.3.0"
cohere = "^5.13.4"
voyageai = "^0.3.2"
langchain = "^0.3.13"
langchain-community = "^0.3.13"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
exclude = '''
/(
    \.git
  | \.venv
  | \.direnv
  | _build
  | build
  | dist
  | \.env
  | \.vscode
  | \.cache
  | github
  | __pycache__
  | .cloudignore
)/
'''

[tool.isort]
py_version = "38"
line_length = 80
lines_after_imports = 2
lines_between_sections = 1
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = "true"
combine_as_imports = "true"
use_parentheses = "true"
skip = ["./docs", ".direnv"]
skip_glob = ["*/__init__.py"]
skip_gitignore = "true"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
minversion = "6.1"
addopts = "--cov"
testpaths = [
    "tests_unit",
]
